# autopilot

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env.yml  flake.nix  pyproject.toml
examples/: demo_mujoco.py  demo_nosim.py  simulation.yaml
src/autopilot/: __init__.py  controller.py  logging_utils.py  resources.py  utils.py
src/autopilot/config/: mpc.yaml
src/autopilot/models/mushr/: mush_nano.xml
tests/: conftest.py  test_integration.py  test_mpc.py  test_utils.py
